<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023 Proton AG
  ~ This file is part of Proton AG and ProtonCore.
  ~
  ~ ProtonCore is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ProtonCore is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ProtonCore.  If not, see <https://www.gnu.org/licenses/>.
  -->
<resources>
    <!-- region payment errors -->
    <string name="payments_general_error">An error occurred.</string>
    <string name="payments_no_connectivity">No connectivity to display 3DS confirmation page.</string>
    <string name="payments_3ds_not_approved">3DS approval has been rejected.</string>
    <string name="payments_error_card_name">Name on card required.</string>
    <string name="payments_error_card_number">Invalid card number.</string>
    <string name="payments_error_cvc">Please enter valid security code.</string>
    <string name="payments_error_session">Valid session ID is needed when subscribing a signed-in user.</string>
    <string name="payments_error_signup_paymentmethod">Could not sign up with existing payment method.</string>
    <string name="payments_error_invalid_session">Invalid session.</string>
    <string name="payments_no_payment_provider">No active payment provider found.</string>
    <string name="payments_error_google_prices">Problem retrieving Google Play Store prices at the moment.</string>
    <string name="payments_error_subscription_managed_other_app">Subscription managed by other app.</string>
    <!-- endregion -->
    <!-- region payment options -->
    <string name="payments_choose_payment_method">Choose your payment method</string>
    <string name="payments_add_credit_debit_card">Add new credit/debit card</string>
    <string name="payments_pay" comment="Example: Pay 5EUR">Pay %s</string>
    <string name="payments_pay_with" comment="Example: Pay with debit card">Pay with</string>
    <string name="payments_method_icon">Payment method icon.</string>
    <string name="payments_method_surcharge">*Purchases made with this payment method incur a surcharge.</string>
    <string name="payments_method_terms_conditions">Buying with Google Pay means you accept Google Pay’s terms and conditions and agree to set up a recurring payment with Google.</string>
    <string name="payments_method_google">Google</string>
    <string name="payments_method_continue">Continue</string>
    <!-- endregion -->
    <!-- region billing -->
    <string name="payments_payment_details">Payment details</string>
    <string name="payments_card_name">Name on card</string>
    <string name="payments_card_number">Card number</string>
    <string name="payments_expiration_date">Expiration date</string>
    <string name="payments_security_code">Security code</string>
    <string name="payments_postal_code">ZIP code</string>
    <string name="payments_card_number_hint">0000 0000 0000 0000</string>
    <string name="payments_expiration_date_hint">MM/YY</string>
    <string name="payments_security_code_hint">123</string>
    <string name="payments_country">Country</string>
    <string name="payments_get_plan">Get %s</string>
    <string name="payments_paying_in_process">Paying</string>
    <string name="payments_choose_country">Select country</string>
    <string name="payment_cc_list_item">%1$s - %2$s (Exp %3$s/%4$s)</string>
    <string name="payment_paypal_list_item">PayPal</string>
    <string name="payments_info_not_available">n/a</string>
    <string name="payments_billing_monthly">For 1 month</string>
    <string name="payments_billing_yearly">For 1 year</string>
    <string name="payments_billing_two_years">For 2 years</string>
    <string name="payment_use_google_pay_instead">Use Google Pay instead</string>
    <string name="payment_use_credit_card_instead">Use credit/debit card instead</string>
    <!-- endregion -->
    <!-- region GIAP -->
    <string name="payments_giap_unredeemed_title">Confirm account upgrade</string>
    <string name="payments_giap_unredeemed_description">Your Google Pay payment was successfully processed, but the account upgrade process was interrupted. Apply the payment to upgrade your account now?</string>
    <string name="payments_giap_unredeemed_confirm">Confirm upgrade</string>
    <string name="payments_giap_redeem_success">Your account was successfully upgraded</string>
    <string name="payments_giap_redeem_error">Unable to complete the upgrade. Please try again later.</string>
    <!-- endregion -->
</resources>
