<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022 Proton Technologies AG
  ~ This file is part of Proton AG and ProtonCore.
  ~
  ~ ProtonCore is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ProtonCore is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ProtonCore.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <me.proton.core.payment.presentation.view.PlanShortDetailsView
            android:id="@+id/selectedPlanDetailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_list_item_rounded_corners"
            android:padding="@dimen/gap_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleText"
            style="@style/ProtonTextView.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_top_margin"
            android:text="@string/payments_payment_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectedPlanDetailsLayout" />

        <me.proton.core.presentation.ui.view.ProtonInput
            android:id="@+id/cardNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_top_margin"
            android:inputType="text|textNoSuggestions"
            app:label="@string/payments_card_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleText" />

        <me.proton.core.presentation.ui.view.ProtonInput
            android:id="@+id/cardNumberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/payments_card_number_hint"
            android:inputType="number|textNoSuggestions"
            app:actionMode="custom_icon"
            app:endIconDrawable="@drawable/ic_proton_credit_card"
            app:label="@string/payments_card_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardNameInput" />

        <LinearLayout
            android:id="@+id/expDateCvcLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardNumberInput">

            <me.proton.core.presentation.ui.view.ProtonInput
                android:id="@+id/expirationDateInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_weight="1"
                android:hint="@string/payments_expiration_date_hint"
                android:inputType="number|textNoSuggestions"
                app:label="@string/payments_expiration_date" />

            <me.proton.core.presentation.ui.view.ProtonInput
                android:id="@+id/cvcInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_weight="1"
                android:hint="@string/payments_security_code_hint"
                android:inputType="number|textNoSuggestions"
                app:label="@string/payments_security_code" />

        </LinearLayout>

        <me.proton.core.presentation.ui.view.ProtonAutoCompleteInput
            android:id="@+id/countriesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:hint="@string/payments_choose_country"
            android:inputType="none"
            app:label="@string/payments_country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expDateCvcLayout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/countriesText">

            <me.proton.core.presentation.ui.view.ProtonInput
                android:id="@+id/postalCodeInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_weight="1"
                app:label="@string/payments_postal_code" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_weight="1" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>