<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Proton Technologies AG
  ~ This file is part of Proton Technologies AG and ProtonCore.
  ~
  ~ ProtonCore is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ProtonCore is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ProtonCore.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <me.proton.core.presentation.ui.view.ZeroInsetLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:windowBackground">

        <me.proton.core.presentation.ui.view.ProtonNavigationButton
            android:id="@+id/closeButton"
            style="@style/ProtonButton.Navigation"
            android:layout_marginStart="@dimen/button_nav_margin_start"
            android:layout_marginTop="@dimen/button_nav_margin_top"
            app:icon="@drawable/ic_close" />

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/BillingContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/gap"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_no_toolbar_top_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <me.proton.core.payment.presentation.view.PlanShortDetailsView
                android:id="@+id/selectedPlanDetailsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_plan"
                android:padding="@dimen/default_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gap" />

            <TextView
                android:id="@+id/paymentOptionsTitle"
                style="@style/ProtonTextView.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_top_margin"
                android:text="@string/payments_choose_payment_method"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectedPlanDetailsLayout" />

            <me.proton.core.presentation.ui.view.ProtonButton
                android:id="@+id/addCreditCardButton"
                style="@style/ProtonButton.Borderless.Text.NoProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_top_margin"
                android:layout_marginBottom="@dimen/double_top_margin"
                android:gravity="start|center_vertical"
                android:text="@string/payments_add_credit_debit_card"
                app:icon="@drawable/ic_plus"
                app:iconGravity="start"
                app:iconPadding="@dimen/double_top_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/paymentOptionsTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/paymentMethodsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_top_margin"
                android:paddingBottom="@dimen/default_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addCreditCardButton" />

            <me.proton.core.presentation.ui.view.ProtonProgressButton
                android:id="@+id/payButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payments_pay"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/progressLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:windowBackground"
            tools:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="3dp"
                android:indeterminate="true"
                android:indeterminateTint="?attr/brand_norm" />
        </FrameLayout>
    </me.proton.core.presentation.ui.view.ZeroInsetLayout>
</layout>
